dev/ingress/shark-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shark-ingress
  namespace: shark-ns
spec:
  ingressClassName: nginx
  rules:
    - host: shark.dolphin.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shark-service
                port:
                  number: 10002
